# R-D-2021-group-5

./: .gitignore  .gitmodules  Launcher.py  requirements.txt
Quiz_Questions/: QuizController.py  quiz.py
Sounds/: qn9.m4a
body/: LedController.py  Synchronized.py  music_controller.py  servo.py  speaker_manager.py  stick.py  stick_manager.py
camera/: CameraController.py  CodeReader.py  FrameHandler.py  HeadController.py  PeopleDetectionHandler.py  PeopleDetector.py  QRCodeHandler.py  VideoController.py  centroidtracker.py  detect.py  head.py
controller/: BehaviorManager.py  DatabaseManager.py  LedController.py  SpeakerManager.py  SticksController.py  VisitorsController.py
controller/phase1/: music_controller.py
controller/phase2/: DatabaseManager.py  VisitorsController.py
controller/phase2/quiz/: QuizCompletionHandler.py  QuizController.py  quiz.json
src/code_filter/: CMakeLists.txt  package.xml
src/code_filter/src/: main.py
src/led_manager/: CMakeLists.txt  package.xml
src/music_controller/: CMakeLists.txt  package.xml
src/music_controller/scripts/: music_controller.py
src/speaker_manager/: CMakeLists.txt  package.xml
src/speaker_manager/scripts/: speaker_manager.py
src/stick_manager/: CMakeLists.txt  package.xml
src/stick_manager/scripts/: example_servo.py  servo.py  stick.py  stick_manager.py
src/visitors_controller/: CMakeLists.txt  package.xml
src/visitors_controller/src/: DatabaseManager.py  main.py
