<?xml version="1.0"?>
<package format="2">
  <name>code_filter</name>
  <version>0.0.0</version>
  <description>A class used to filter messages published on the /barcode topic, to avoid the same QR code being broadcasted multiple times</description>

  <maintainer email="lorenzo.farinelli@outlook.it">Lorenzo Farinelli</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
